--- a/styles/style.css
+++ b/styles/style.css
@@ -67,6 +67,10 @@ a:active {
 	text-align: center;
 }
 
+.menu-primer li:first-child{
+	border-left: 1px solid #d1d5da;
+}
+
 .menu-primer li{
 	border-right: 1px solid #d1d5da;
 	display: inline-block;
